--- a/ns_yc_app/templates/index.html
+++ b/ns_yc_app/templates/index.html
@@ -10,7 +10,7 @@
 <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML"> </script>
 {% extends base %}
 
-{% block title %}Bokeh Gapminder Example{% endblock %}
+{% block title %}Nelson-Siegel Yield Curve model{% endblock %}
 
 {% block postamble %}
   <style>
